# dotctrl

./: .editorconfig  .flake8  .gitignore  .imake  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  GARBAGE_NOTES.txt  LICENSE  MANIFEST.in  METAS.txt  README.md  README.rst  docker.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/readme/: pt_BR.md
.github/svg/donate/: readme.txt
.github/workflows/: python-publish.yml  pythonpackage.yml  tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
dotctrl/: __init__.py  cli.py  config.py  decorators.py  dotctrl.py  menu.py  ransom.py  utils.py
dotctrl/actions/: check.py  config.py  credits.py  init.py  link.py  list.py  pull.py  remove.py  restore.py  unlink.py
dotctrl/config/: base.py  config.py  gitignore.py  menu.py  package.py  readme.py
dotctrl/console/: check.py  config.py  credits.py  init.py  link.py  list.py  pull.py  remove.py  restore.py  unlink.py
dotctrl/console/utils/: __init__.py  catch.py  path.py  process.py  shift.py
dotctrl/utils/: __init__.py  catch.py  checking.py  path.py  shift.py
run/: make
snakypy/dotctrl/: __init__.py  __main__.py  dotctrl.py
snakypy/dotctrl/actions/: check.py  config.py  copy.py  credits.py  find.py  init.py  link.py  list.py  pull.py  remove.py  repo.py  restore.py  unlink.py
snakypy/dotctrl/config/: base.py  config.py  gitignore.py  lang.py  menu.py  package.py  readme.py
snakypy/dotctrl/utils/: __init__.py  catch.py  checking.py  colors.py  decorators.py  dialog.py  exceptions.py  messages.py  modifiers.py  path.py  process.py  shift.py
tests/: __init__.py  test_arguments.py  test_check.py  test_dotctrl.py  test_find.py  test_init.py  test_link.py  test_list.py  test_pull.py  test_repo.py  test_restore.py  test_unlink.py  test_version.py  utilities.py
