[tool.poetry]
name = "dotctrl"
version = "1.1.7"
description = "Dotctrl is a package for managing your dotfiles on Linux."
authors = ["William C. Canin <william.costa.canin@gmail.com>"]
readme = "README.rst"
license = "MIT license"
keywords=["dotfiles", "snakypy", "dot", "linux"]
homepage = "https://github.com/snakypy/dotctrl"
repository = "https://github.com/snakypy/dotctrl"
include = ["LICENSE"]

classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]

packages = [
    { include = "snakypy" }
]

[tool.poetry.scripts]
dotctrl = "snakypy.dotctrl.dotctrl:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/snakypy/dotctrl/issues"

[tool.poetry.dependencies]
python = "^3.9"
snakypy-helpers = "^0.1.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
twine = "^3.4.1"
wheel = "^0.36.2"
flake8 = "^3.9.1"
tox = "^3.23.0"
pytest = "^6.2.3"
pytest-runner = "^5.2"
ipython = "^7.23.1"
black = "^21.5b1"
pre-commit = "^2.12.1"
sphinx-rtd-theme = "^0.5.2"
recommonmark = "^0.7.1"
mypy = "^0.812"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | buck-out
    | build
    | _build
    | venv
    | dist
    | docs
    | tmp
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
