[tool.poetry]
name = "dotctrl"
version = "1.1.8"
description = "Dotctrl is a package for managing your dotfiles on Linux."
authors = ["William C. Canin <william.costa.canin@gmail.com>"]
readme = "README.rst"
license = "MIT license"
keywords=["dotfiles", "snakypy", "dot", "linux"]
homepage = "https://github.com/snakypy/dotctrl"
repository = "https://github.com/snakypy/dotctrl"
include = ["LICENSE"]

classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]

packages = [
    { include = "snakypy" }
]

[tool.poetry.scripts]
dotctrl = "snakypy.dotctrl.dotctrl:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/snakypy/dotctrl/issues"

[tool.poetry.dependencies]
python = "^3.9"
snakypy-helpers = "^0.1.4"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
tox = "^3.23.0"
pytest = "^6.2.3"
ipython = "^7.23.1"
black = "^21.5b1"
pre-commit = "^2.13.0"
mypy = "^0.812"
imake = "^0.1.0"
isort = "^5.8.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | buck-out
    | build
    | _build
    | venv
    | dist
    | docs
    | tmp
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["snakypy", "tests"]
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/.pytest_cache"
# addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
